<resources>
    <string name="app_name">image</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="selectString">선택을 시작하겠습니까?</string>
    <string name="jellybeanString">젤리빈(4.3)</string>
    <string name="kitkatString">킷켓(4.4)</string>
    <string name="lollipopString">롤리팝(5.0)</string>
    <string name="finishString">종료</string>
    <string name="restartString">처음으로</string>
</resources>
